--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-paypal-button-v2": "^2.6.3",
     "typescript": "4.9.5"
   }
 }
