--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.2",
     "firebase": "^9.17.2",
+    "firebaseui": "^6.0.2",
     "next": "13.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
