--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paypal/paypal-js": "^5.1.4",
+    "@paypal/react-paypal-js": "^7.8.2",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -19,7 +21,6 @@
     "next": "13.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-paypal-button-v2": "^2.6.3",
     "typescript": "4.9.5"
   }
 }
